添加pdf预留插件

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -22,8 +22,8 @@ android {
     defaultConfig {
         minSdkVersion 17
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
+        versionCode VERSAION_CODE.toInteger()
+        versionName VERSAION_NAME.toString()
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -39,9 +39,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
-
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 }
